Correction version tablette

--- a/style.css
+++ b/style.css
@@ -767,7 +767,7 @@ footer ul
 
     #reservation_1
     {
-        justify-content: space-around;
+        justify-content: space-evenly;
     }
 
     #booking
@@ -808,8 +808,7 @@ footer ul
     {
         flex-direction: row;
         flex-wrap: wrap ;
-        justify-content: center;
-
+        justify-content: space-around;
     }
 
     #activities_bloc img
@@ -827,7 +826,7 @@ footer ul
 
     #activites h2
     {
-        padding-left: 30px;
+        padding-left: 20px;
     }
 
     .carte_activites
@@ -846,6 +845,7 @@ footer ul
     {
         width: 45%;
     }
+
     #frioul
     {
         height: 250px;
@@ -868,25 +868,26 @@ footer ul
     #activities_bloc div:nth-child(1)
     {
         order: 1;
-        margin: 10px;
+        margin: 10 10  10 0;
     }
 
     #activities_bloc div:nth-child(2)
     {
         order: 3;
-        margin: 10px;
+        margin: 10 10  10 0;
+        
     }
 
     #activities_bloc div:nth-child(3)
     {
         order: 2;
-        margin: 10px;
+        margin: 10 10  10 0;
     }
 
     #activities_bloc div:nth-child(4)
     {
         order: 4;
-        margin: 10px;
+        margin: 10 10  10 0;
     }
 
     /*footer*/
